force-app/main/default/objects/Eng_Valuation_Period_Allocation__c/Eng_Valuation_Period_Allocation__c.object-meta.xml
<CustomObject>
    <label>Eng Valuation Period Allocation</label>
    <nameField>
        <displayFormat>VPA-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eng Valuation Period Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>