force-app/main/default/objects/Eng_Valuation_Period_Allocation__c/fields/Analyst_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Allocation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Analyst Allocation %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>