force-app/main/default/objects/Eng_Valuation_Period_Allocation__c/fields/Engagement_Valuation_Period__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Valuation_Period__c</fullName>
    <label>Engagement Valuation Period</label>
    <referenceTo>Eng_VP__c</referenceTo>
    <relationshipLabel>Eng Valuation Period Allocations</relationshipLabel>
    <relationshipName>Eng_Valuation_Period_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>