force-app/main/default/objects/Eng_Valuation_Period_Allocation__c/fields/Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>Week_Ending__c</fullName>
    <label>Week Ending</label>
    <type>Date</type>
</CustomField>