force-app/main/default/objects/Eng_Valuation_Period_Allocation__c/fields/Week_Starting__c.field-meta.xml
<CustomField>
    <fullName>Week_Starting__c</fullName>
    <label>Week Starting</label>
    <type>Date</type>
</CustomField>