force-app/main/default/objects/Eng_Valuation_Period_Allocation__c/validationRules/Allocation_boundary.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation_boundary</fullName>
    <active>true</active>
    <description>Allocation boundary</description>
    <errorConditionFormula>OR(Admin_Allocation__c&lt;0 
,Admin_Allocation__c &gt;1
,Analyst_Allocation__c&lt;0 
,Analyst_Allocation__c &gt;1
,Associate_Allocation__c&lt;0 
,Associate_Allocation__c &gt;1
)</errorConditionFormula>
    <errorMessage>Allocation should be between 0 to 100%.</errorMessage>
</ValidationRule>